# MotorOpenGL

./: SCRIPTING.md
CapiEngine/: CMakeLists.txt  recursos.rc
CapiEngine/EngineCore/: CMakeLists.txt
CapiEngine/EngineCore/include/: GLApplication.h
CapiEngine/EngineCore/include/component/: Light.h  LuaScript.h  MeshRenderer.h  ModelRenderer.h  ScriptInstance.h
CapiEngine/EngineCore/include/core/: Camera.h  KeyCode.h  Scene.h
CapiEngine/EngineCore/include/ec/: ec.h  entity.h
CapiEngine/EngineCore/include/lighting/: PointLight.h  ShadowMap.h  Skybox.h
CapiEngine/EngineCore/include/managers/: InputManager.h  ResourceManager.h  SceneManager.h
CapiEngine/EngineCore/include/mesh/: AssimpLoader.h  Mesh.h  MeshID.h  Model.h  ModelMesh.h
CapiEngine/EngineCore/include/register/: LuaRegistry.h
CapiEngine/EngineCore/include/surface/: Texture.h
CapiEngine/EngineCore/include/utils/: Singleton.h
CapiEngine/EngineCore/src/: GLApplication.cpp
CapiEngine/EngineCore/src/component/: Light.cpp  LuaScript.cpp  MeshRenderer.cpp  ModelRenderer.cpp  ScriptInstance.cpp
CapiEngine/EngineCore/src/core/: Camera.cpp  Scene.cpp
CapiEngine/EngineCore/src/lighting/: Skybox.cpp
CapiEngine/EngineCore/src/managers/: InputManager.cpp  LightManager.cpp  ResourceManager.cpp  SceneManager.cpp
CapiEngine/EngineCore/src/mesh/: AssimpLoader.cpp  Mesh.cpp  Model.cpp  ModelMesh.cpp
CapiEngine/EngineCore/src/surface/: Material.cpp  Texture.cpp
CapiEngine/EngineEditor/: CMakeLists.txt
CapiEngine/EngineEditor/include/: EditorApp.h
CapiEngine/EngineEditor/include/drawGUI/component/: GlobalLightGUI.h  LuaScriptGUI.h  ModelRendererGUI.h
CapiEngine/EngineEditor/include/project/: ProjectBuilder.h  ProjectLoader.h
CapiEngine/EngineEditor/src/: EditorApp.cpp  main.cpp
CapiEngine/EngineEditor/src/drawGUI/component/: GlobalLightGUI.cpp  LuaScriptGUI.cpp  ModelRendererGUI.cpp
CapiEngine/EngineEditor/src/drawGUI/material/: MaterialGUI.cpp
CapiEngine/EngineEditor/src/managers/: UIManager.cpp
CapiEngine/EngineEditor/src/project/: ProjectBuilder.cpp  ProjectLoader.cpp
CapiEngine/EngineEditor/src/windows/: InspectorWindow.cpp  ViewportWindow.cpp
CapiEngine/Runtime/: CMakeLists.txt  README.md  Runtime.json
CapiEngine/Runtime/include/: ResourcesLoader.h
CapiEngine/Runtime/src/: ResourcesLoader.cpp  main.cpp
Proyecto1/assets/scenes/: default.scene  minecraft.scene
Proyecto1/assets/scripts/: Rotator.lua
